--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@ DARK = _d && _d[1] === '1';
 <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml" title="{{ site.title | escape }}">
 <link rel="canonical" href="{{ page.url | absolute_url }}">
 <link rel="me" href="https://mastodon.technology/@krinkle">
+{%- if page.layout == "home" -%}
+<link rel="me" href="https://polyglot.city/@krinkle">
+{%- endif -%}
 {% include opengraph.html %}
 {% endcapture -%}
 {{ meta | strip_newlines }}
