--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,8 +4,8 @@ plainwhite:
   small_header: true
 ---
 
-<h1 class="page-heading">Tag: {{ page.tag | escape }}</h1>
-<h1 class="posts-label">{%- if site.tags[page.tag].size == 1 -%} 1 post {%- else -%} {{ site.tags[page.tag].size }} posts {%- endif -%}</h1>
+<h1>Tag: {{ page.tag | escape }}</h1>
+<p class="posts-label">{%- if site.tags[page.tag].size == 1 -%} 1 post {%- else -%} {{ site.tags[page.tag].size }} posts {%- endif -%}</p>
 
 {%- for post in site.tags[page.tag] -%}
 <div class="posts-row">
