--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 {% capture _icon_calendar_svg %}{% include_relative icon-calendar.svg %}{% endcapture %}
 {% capture _icon_github_svg %}{% include_relative icon-github-circled.svg %}{% endcapture %}
 {% capture _icon_mastodon_svg %}{% include_relative icon-mastodon.svg %}{% endcapture %}
+{% capture _icon_rss_svg %}{% include_relative icon-rss-squared.svg %}{% endcapture %}
 {% capture _icon_twitter_svg %}{% include_relative icon-twitter-squared.svg %}{% endcapture %}
 
 .icon-calendar {
@@ -16,6 +17,9 @@
 }
 .icon-mastodon {
 	background-image: url("data:image/svg+xml, {{ _icon_mastodon_svg | remove_first: '<?xml version="1.0" encoding="utf-8"?>' | strip_newlines | uri_escape | replace: '%20', ' ' }}");
+}
+.icon-rss-squared {
+	background-image: url("data:image/svg+xml, {{ _icon_rss_svg | remove_first: '<?xml version="1.0" encoding="utf-8"?>' | strip_newlines | uri_escape | replace: '%20', ' ' }}");
 }
 .icon-twitter-squared {
 	background-image: url("data:image/svg+xml, {{ _icon_twitter_svg | remove_first: '<?xml version="1.0" encoding="utf-8"?>' | strip_newlines | uri_escape | replace: '%20', ' ' }}");
