--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,20 +3,18 @@ layout: default
 plainwhite:
   small_header: true
 ---
-{%- assign date_format = site.plainwhite.date_format | default: "%b %-d, %Y" -%}
+{%- assign date_format = site.plainwhite.date_format | default: "%-e %b %Y" -%}
 <a class="post-link" href="{{ page.url | relative_url }}">
   <h1>{{ page.title | escape }}</h1>
 </a>
 <div class="post-meta">
-  <span class="post-date"><i class="icon icon-calendar"><span class="screen-reader-text">Published on</span></i><time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
-  in
+  <span class="post-date"><time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
+  •
   {% for tag in page.tags -%}
-    {%- if page.tags.first != tag and page.tags.last != tag %}, {% endif -%}
-    {%- if page.tags.first != tag and page.tags.last == tag %}, and {% endif -%}
+    {%- if page.tags.first != tag %}, {% endif -%}
     {%- assign tagpage = site.pages | where: "tag", tag | first -%}
     {%- assign tagtitle = tagpage.title | default: tag -%}
     <a rel="tag" class="post-tag" href="{% link {{ tag | prepend: 'tags/' | append: '.md' }} %}">{{ tagtitle | escape }}</a>
-    {%- if page.tags.last == tag %}.{% endif -%}
   {%- endfor -%}
 </div>
 <hr>
@@ -24,6 +22,7 @@ plainwhite:
   {{- content | fix_extlink -}}
 </article>
 <hr>
+<footer role="contentinfo">
 {%- if page.plainwhite.original_url or page.plainwhite.also_url -%}
 <p>
   {% if page.plainwhite.original_url -%}
@@ -45,3 +44,4 @@ plainwhite:
 </p>
 {%- endif -%}
 <p><a rel="license noopener" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Some rights reserved</a><span tabindex="0" class="tip-handle">i</span><span data-tip="Except where otherwise noted, this work is licensed under a Creative Commons license (CC BY 4.0)"></span>. {% if page.author_role == 'editor' %}Edited by{% else %}Written by{% endif %} <span rel="author">{{ page.author | escape }}<span>. Published on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%-e %B %Y' }}</time>.</p>
+</footer>
