--- a/_sass/ext/_solarized-light.scss
+++ b/_sass/ext/_solarized-light.scss
@@ -13,7 +13,7 @@ cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
 
-.highlight { background-color: #fdf6e3; color: #586e75 }
+/* unused *//*.highlight { background-color: #fdf6e3; color: #586e75 }*/
 .highlight .c { color: #93a1a1 } /* Comment */
 .highlight .err { color: #586e75 } /* Error */
 .highlight .g { color: #586e75 } /* Generic */
