theme: add <meta name=author> to support byline in Safari Reader mode
Safari Reader mode is not picking up anything else I've trown at it,
including:

* <meta property="og:type" content="article">
  <a rel=author> inside <footer role=contentinfo>
* <main itemscope itemtype="http://schema.org/BlogPosting">
  <span itemprop="author">…</span></main>
* <main itemscope itemtype="http://schema.org/BlogPosting">
  <a rel="author">…</a></main>
* <p itemscope itemtype="http://schema.org/Person">
  <span itemprop="author">…</span></p>
* …

Also remove use of <article> inside <main> which might be confusing
some semantics, also as some sources are saying <article> is suboptimal
for performance.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,9 @@ plainwhite:
   {%- endfor -%}
 </div>
 <hr>
-<article class="post">
+<div class="post">
   {{- content | fix_extlink -}}
-</article>
+</div>
 <hr>
 <footer role="contentinfo">
 {%- if page.plainwhite.original_url or page.plainwhite.also_url -%}
