--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -42,5 +42,6 @@
 
 {% if page.date %}
 <meta property="og:type" content="article">
+<meta name="author" content="{{ page.author | escape }}">
 <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
 {% endif %}
