--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,11 @@ plainwhite:
   small_header: true
 ---
 {%- assign date_format = site.plainwhite.date_format | default: "%-e %b %Y" -%}
-<a class="post-link" href="{{ page.url | relative_url }}">
-  <h1>{{ page.title | escape }}</h1>
-</a>
-<div class="post-meta">
+<article>
+<header class="post-meta">
+  <a class="post-link" href="{{ page.url | relative_url }}">
+    <h1>{{ page.title | escape }}</h1>
+  </a>
   <span class="post-date"><time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
   •
   {% for tag in page.tags -%}
@@ -16,7 +17,7 @@ plainwhite:
     {%- assign tagtitle = tagpage.title | default: tag -%}
     <a rel="tag" class="post-tag" href="{% link {{ tag | prepend: 'tags/' | append: '.md' }} %}">{{ tagtitle | escape }}</a>
   {%- endfor -%}
-</div>
+</header>
 <hr>
 <div class="post">
   {{- content | fix_extlink -}}
@@ -45,3 +46,4 @@ plainwhite:
 {%- endif -%}
 <p><a rel="license noopener" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Some rights reserved</a><span tabindex="0" class="tip-handle">i</span><span data-tip="Except where otherwise noted, this work is licensed under a Creative Commons license (CC BY 4.0)"></span>. {% if page.author_role == 'editor' %}Edited by{% else %}Written by{% endif %} <span rel="author">{{ page.author | escape }}<span>. Published on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%-e %B %Y' }}</time>.</p>
 </footer>
+</article>
