theme: make tooltips accessible via focus tap on (i)
For <abbr>, <acronym> and other non-link elements this is based
purely on CSS and the HTML element with 'title'  and (focussable)
'tabindex' attributes. There is a 'before' pseudo-element that
generates the (i) button, which if focussed, displays the
'after' pseudo-element with the title value in a fixed overlay.

On desktop and tablets, the overlay is on the line below the (i)
taget, using position-absolute without any top/bottom set, which
it defaults to the relative static position which  we widen to
the full width and then move it down relatively using margin-top.

On mobile, the overlay is pinned to the bottom of the screen
instead.

For <a href>, we can't easily do this because clicking on the
'before' element would unavoidably cause the link itself also
to be clicked and lead to unintended navigation. I tried to
make this work by setting 'pointer-events: none' on the 'before'
element so that perhaps once focussed, the chain of
hover->focus->click would stop, but no dice. I think the order
might be hover->click->focus instead, which means by the time
focussed happened the click has already been registered.
The other problem is that when you set 'pointer-events: none' you
don't actually prevent pointer events, rather this makes the
target element invisible/transparent for pointer event purposes,
meaning that surrounding/underlying element receives the event
instead, which presents the same problem (link getting clicked).

As a solution, I require a child <span> to exist within the link,
which is automatically inserted server-side by a Markdown filter.
There is one line of JS code that uses a single global delegate
click handler to prevent propagation of clicks from <span title>
to <a title>.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ plainwhite:
   <a class="post-link" href="{{ page.url | relative_url }}">
     <h1>{{ page.title | escape }}</h1>
   </a>
-  <span class="post-date"><time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
+  <span class="post-date"><time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
   •
   {% for tag in page.tags -%}
     {%- if page.tags.first != tag %}, {% endif -%}
@@ -20,7 +20,7 @@ plainwhite:
 </header>
 <hr>
 <div class="post">
-  {{- content | fix_extlink -}}
+  {{- content | fix_extlink | fix_tooltip -}}
 </div>
 <hr>
 <footer role="contentinfo">
@@ -44,6 +44,6 @@ plainwhite:
   {%- endif -%}
 </p>
 {%- endif -%}
-<p><a rel="license noopener" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Some rights reserved</a><span tabindex="0" class="tip-handle">i</span><span data-tip="Except where otherwise noted, this work is licensed under a Creative Commons license (CC BY 4.0)"></span>. {% if page.author_role == 'editor' %}Edited by{% else %}Written by{% endif %} <span rel="author">{{ page.author | escape }}<span>. Published on <time datetime="{{ page.date | date: '%Y-%m-%d' }}" title="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%-e %B %Y' }}</time>.</p>
+<p><a rel="license noopener" href="https://creativecommons.org/licenses/by/4.0/" target="_blank" title="Except where otherwise noted, this work is licensed under a Creative Commons license (CC BY 4.0)">Some rights reserved<span title="Except where otherwise noted, this work is licensed under a Creative Commons license (CC BY 4.0)" tabindex="0"></span></a>. {% if page.author_role == 'editor' %}Edited by{% else %}Written by{% endif %} <span rel="author">{{ page.author | escape }}<span>. Published on <time tabindex="0" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%-e %B %Y' }}</time>.</p>
 </footer>
 </article>
