theme: add 'flex: 1' to .content
When drafting a new (short) page I noticed the width was distributed
evenly between the sidebar's space and the content area. Force the
space to go to the content area instead as one would expect.

--- a/_sass/plainwhite.scss
+++ b/_sass/plainwhite.scss
@@ -185,6 +185,7 @@ code.highlighter-rouge {
 	}
 	@media screen and (min-width: $breakBeyondMobile) {
 		max-width: calc(100% - 220px);
+		flex: 1;
 	}
 }
 
