theme: change `hr` style from pull out to regular content
Follows-up 20336ae, which treated `hr` as pull out full-width
elements. I'm reverting this because it makes it feels too much
like a top-level divider, as if the page has ended with an unrelated
article following after. It also didn't match the width of the
post metadata line under the heading (and couldn't) which made
looked off.

--- a/_sass/plainwhite.scss
+++ b/_sass/plainwhite.scss
@@ -110,7 +110,7 @@ blockquote > p:last-child {
 hr {
 	clear: both;
 	border: 0;
-	margin: 1.5em auto;
+	margin: 1.5rem auto;
 	height: 1px;
 }
 
@@ -471,7 +471,6 @@ a.sitelink,
 	}
 	figure,
 	table,
-	hr,
 	> p:not(.md-block) > img,
 	.md-block,
 	pre.highlight {
